Updating z-index to prevent shadow overlay

--- a/components/stylesheets/Card.module.css
+++ b/components/stylesheets/Card.module.css
@@ -8,6 +8,7 @@
     border: 1px solid var(--secondary-border-color);
     box-shadow: var(--article-shadow-normal), 0 0 0 transparent;
     transition: all 0.25s cubic-bezier(0.02, 0.01, 0.47, 1);
+    z-index: 1;
 }
 
 .card:first-of-type {
